# odooHelpers

./: .gitignore  pyproject.toml
data/: class_params.csv  vendor_exceptions.csv
scripts/: build_air_sheet.py  build_plan_sheet.py  build_warehouse_dashboard.py  cleanup_sheets.py  create_pos.py  plan_class.py  receive_from_sheet.py  smoke_gsheets.py  smoke_odoo.py  split_receipt.py  vendor_receipts.py
scripts/odoo/: README.md  po_fix_descriptions.py  po_set_price.py  po_units.py
src/inventorymgr/: air.py  assemble.py  config.py  engine.py  model.py  settings.py  sheets_output.py  warehouse_metrics.py
src/inventorymgr/sources/: gsheets.py  odoo_client.py  odoo_source.py  sample_plan.py
tests/: test_assemble.py  test_assembly_reconcile.py  test_config.py  test_engine_reconcile.py  test_engine_unit.py  test_warehouse_metrics.py
